--- a/java-8/pom.xml
+++ b/java-8/pom.xml
@@ -24,5 +24,15 @@
       <version>1.18.28</version>
     </dependency>
 
+
+    <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+    <!-- 分析对象内存布局 -->
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.17</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 </project>
